Added github link and updated tests

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/?!(react-icons)"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
